# projects-bot

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: code.py  fun.py  info.py  moderation.py  projects.py  roles.py  snippets.py  testing.py  warns.py
data/: database.py
log_manager/: logging_config.json  logging_config.py
src/hux/: main.py
src/hux/cogs/: code.py  code_snippets.py  fun.py  info.py  projects.py  roles.py  snippets.py  testing.py
src/hux/data/: database.py
src/hux/log_manager/: logging_config.json  logging_config.py  logging_manager.py
src/hux/templates/: embeds.py  models.py  parse.py  view.py
templates/: base_view.py  embeds.py  models.py  parse.py  view.py
