[project]
name = "projects-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "async-timeout==3.0.1",
    "attrs==26.1.0",
    "audioop-lts==0.2.2",
    "chardet==4.0.0",
    "discord-py==2.7.1",
    "ffmpeg-python==0.2.0",
    "frozenlist==1.8.0",
    "future==1.0.0",
    "idna==3.11",
    "imageio-ffmpeg==0.6.0",
    "multidict==6.7.1",
    "mypy==1.4.0",
    "mypy-extensions==1.1.0",
    "numpy==2.4.3",
    "propcache==0.4.1",
    "python-dotenv==1.2.2",
    "ruff==0.15.9",
    "typing-extensions==3.10.0.2",
    "yarl==1.23.0",
]
