[project]
name = "hux"
version = "0.1.0"
description = "Bot for Hogjects discord server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.13.5",
  "aiosqlite>=0.22.1",
  "discord-py>=2.7.1",
  "python-dotenv>=1.2.2",
]

[project.scripts]
hux = "hux.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
